# r2

./: CMakeLists.txt  LICENSE  README.md
demo/: main.c
demo/rsc/: smile.qoi  smile2.qoi
src/headers/: fb.h  font.h  gl.h  shader.h  tex.h  util.h
src/headers/glad/: glad.h
src/sources/: build.c  fb.c  font.c  gl.c  gl_cshape.c  gl_shape.c  glad.c  shader.c  tex.c  util.c
